Dev pass s_ben repos
Dev pass on dcdd, dcrwallet, Decredion, dcrstakepool, dcrlnd, dcrandroid, dcrios, dcrdocs, dcrweb

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -8,21 +8,175 @@
 
 {add below overview of activity for each project. add any other project that warranets a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
 
-[dcrd](https://github.com/decred/dcrd): {}
+[dcrd](https://github.com/decred/dcrd): Code maintenance, bug fixes, test infrastructure. 
+
+New major versions of several main modules introduced to take advantage of recent improvements in other modules. Version 4 of the `rpcclient` [introduced](https://github.com/decred/dcrd/pull/1807) to make use of the benefits provided by the updated `dcrutil` and `chaincfg` modules. Version 2 of the `blockchain/stake` [introduced](https://github.com/decred/dcrd/pull/1803) for compatability with updated `dcrutil`, `chaincfg`, and `database` modules. This update also took the opportunity to address a few other needed changes to the staking API {SB: is "staking API" accurate? use other term?}. Version 2 of the `database` module [introduced](https://github.com/decred/dcrd/pull/1799) to make use of changes in `dcrutil`. This update breaks the tight coupling of `database` with `dcrutil` by introducing a new `BlockSerializer` interface and using it instead of `*dcrutil.Block` in the database interface API. The `dcrjson` module has also seen a new major version bump to v3. This version removes all dcrd RPC type support, instead focusing only on method and type registration. In order to improve backwards compatibility with dcrjson/v2, the API has been modified to register methods as interface{} instead of string. This allows different method string types to be used to key parameter types during registration and lookup, and will allow dcrjson/v2 to forward registrations of RPC methods to v3 without causing duplicate registrations errors for incompatible types. With the introduction of the new types package, the RPC API has been modified to replace concatenated hash blobs to JSON string arrays of hash strings. The RPC API major version is bumped to reflect this change. {SB: description of this last module update taken verbatim from the PR, should probably be shortened, given some context for the reader}
+
+Four new [functions](https://github.com/decred/dcrd/pull/1802) on the `Param` struct, which return new stake-related parameters: `VotesPerBlock`, `StakeValidationBeginHeight`, `StakeEnableHeight`, `TicketExpiryBlocks`. This will allow these parameters to be used directly as input to future interfaces. 
+
+Dependency upgrades to: mgcs (go-storage) dependencies [updated](https://github.com/decred/dcrd/pull/1804) in preparation for upgrade to v1.1.0., JSON-RPC types [updated](https://github.com/decred/dcrd/pull/1789), Docker [updated](https://github.com/decred/dcrd/pull/1782) to use go 1.12.  
+
+
+Merged:
+* rpcclient: Introduce v4 module https://github.com/decred/dcrd/pull/1807
+  Version 4 of the `rpcclient` [introduced](https://github.com/decred/dcrd/pull/1807) in order to make use of the benefits provided by the recently updated `dcrutil` and `chaincfg` modules. Note that while `rpcclient` Version 4 is officially in the codebase, building dcrd from source will still produce binaries based on the Version 3 `rpcclient` module. 
+* blockchain/stake: Introduce v2 module. https://github.com/decred/dcrd/pull/1803 (related to new Version 4 `rpcclient` module? In order to make use of chaincfg/v2, dcrutil/v2, and database/v2, a new major version of the blockchain/stake module (blockchain/stake/v2) is [introduced](https://github.com/decred/dcrd/pull/1803) because blockchain/stake/v1 accepts and returns types from chaincfg/v1, dcrutil/v1, and database/v1 in its API. This was also used as an opportunity to address a few other items that require a new major version (SB: details on individual changes in PR). Finally, it should also be noted that this only introduces the new module and does not update anything to make use of it yet, so building the software will still produce binaries based on the v1 module.)
+* database: Introduce v2 module https://github.com/decred/dcrd/pull/1799 (SB: related to other changes to group together..In order to make use of dcrutil/v2, a new major version of the database module is required because database/v1 accepts and returns types from dcrutil/v1 in its API...Since a new major version is required, this also takes the opportunity break the tight coupling with dcrutil by introducing a new BlockSerializer interface and accepting it instead of *dcrutil.Block in the database interface API. Consequently, this introduces database/v2 which addresses the aforementioned items. Binaries still base on v1 module... 
+* dcrjson: Introduce v3 and move types to module. https://github.com/decred/dcrd/pull/1779 (This commit introduces a new major version of the dcrjson module which removes all dcrd RPC type support, instead focusing only on method and type registration....In order to improve backwards compatibility with dcrjson/v2, the API has been modified to register methods as interface{} instead of string. This allows different method string types to be used to key parameter types during registration and lookup, and will allow dcrjson/v2 to forward registrations of RPC methods to v3 without causing duplicate registrations errors for incompatible types.
+* main: Add database/v2 override for tests. https://github.com/decred/dcrd/pull/1806 (keeping tests up to date..)
+* chaincfg: Fix merkle root of v1 simnet genesis block https://github.com/decred/dcrd/pull/1805 (fix bug in simnet (hard fork change but OK because simnet)
+* gcs: Prepare v1.1.0 https://github.com/decred/dcrd/pull/1804 (updates gcs (go-storage) dependencies in preparation for upgrading to go-storage v1.1.0. Also optimizes the `AddSigScript` method by making use of the zero-alloc tokenizer now available in the `txscript/v2` module).
+* chaincfg: Add stake params accessor funcs https://github.com/decred/dcrd/pull/1802 (Four new functions on the `Params` struct (SB: purpose of this struct? High-levle meaning to reader?), which return some stake-related parameters (VotesPerBlock, StakeValidationBeginHeight, StakeEnableHeight, TicketExpiryBlocks). This will allow the parameters to be used directly as input to an interfact in the future). 
+* chaincfg: Avoid block 1 subsidy codegen explosion. https://github.com/decred/dcrd/pull/1801 (Fixes an issue where the go compiler was causing the package "weight" (size?) to explode to 7.7 MB. This improves the compiled size of the package by using code generation techniquest to optimize the memory layout and code transformation of the subsidy values each time a params functino is called"...the new size of the compiled package is 379dB, about 5% of the original size.
+* hdkeychain: Prepare v2.0.1. https://github.com/decred/dcrd/pull/1798 (not super notable?)
+* main: Use rpcclient/v3. https://github.com/decred/dcrd/pull/1795
+* multi: Use decred fork of go-socks. https://github.com/decred/dcrd/pull/1790 (This modifies the code to use the Decred fork of the go-socks module throughout and updates the affected modules to use the v1.0.0 release of the socks module.)
+* main: Use latest JSON-RPC types. https://github.com/decred/dcrd/pull/1789 (SB: minor upgrade worth mentioning?)
+* mempool: remove unused error return value https://github.com/decred/dcrd/pull/1785 (SB: bug fix)
+* TravisCI: Use more portable module ver stripping. https://github.com/decred/dcrd/pull/1784 (SB: minor script fix that allows it to work on mac)
+* travis: drop docker and test directly https://github.com/decred/dcrd/pull/1783 (SB: minor test improvement)
+* docker: use go 1.12  https://github.com/decred/dcrd/pull/1782 (update docker to use go 1.12)
+* dcrutil: Alias amount types to v2 module https://github.com/decred/dcrd/pull/1781 (SB more type fixing stuff..)
+
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
+Merged:
+
+* Update to chaincfg/v1.5.2 for simnet compatability https://github.com/decred/dcrwallet/pull/1511 (fix so wallet works after hard fork simnet fix)
+* Replace rpcclient/v2 and introduce wallet/v3 https://github.com/decred/dcrwallet/pull/1509 (replaces a couple modules...not sure what's the meaning here)
+* wallet: Store account xpub in address buffer after upgrade https://github.com/decred/dcrwallet/pull/1508 (bug fix)
+* Replace remaining rpcclient.Exists Tickets calls https://github.com/decred/dcrwallet/pull/1507 (change to call to accomidate change in dcrd)
+* Updates for dcrjson/v3 https://github.com/decred/dcrwallet/pull/1506 (updates to reflect JSON-RPC changes in dcrd)
+* Update to gRPC 1.22.0 and protoc-gen-go 1.3.2 https://github.com/decred/dcrwallet/pull/1504 (no description...presumably just dependency upgrades)
+* gRPC: add CoinType() method https://github.com/decred/dcrwallet/pull/1499 (Adds gRPC method to query wallet coin type. This resolves an issue where dcrwallet was unable to tell Decrediton or other wallets what the coin type is (i.e. New wallets are 42 but older seeds can be 20.) {SB: not sure what the 42 and 30 mean}
+* Remove gRPC methods that are obsoleted by RpcSync. https://github.com/decred/dcrwallet/pull/1496 (code maintenance. Removing methods no longer needed due to RpcSync)
+
+Open:
+
+* Update to latest dcrd modules https://github.com/decred/dcrwallet/pull/1512 (Removes usage of modules which have had breaking changes and new major module versinos, replacing their usage with the latest major version. I.e. updating to keep pace with new modules in dcrd)
+* json-rpc: Change public pass phrase command https://github.com/decred/dcrwallet/pull/1510 (This adds a feature to change the public passphrase over json-rpc dcrctl --wallet walletpubpassphrasechange)
+* udb: return base dbAccountRow for fetchAccountInfo https://github.com/decred/dcrwallet/pull/1505 (This updates the fetchAccountInfo function signature to return a base account row which allows returning different account types other than a BIP0044 account row.)
+* multi: list 0 confirmation txs for listsinceblock. https://github.com/decred/dcrwallet/pull/1503 (This updates listsinceblock to allow listing 0-conf txs and corrects the last_block result field behaviour.)
+* multi: prevent multiple imports of the same script. https://github.com/decred/dcrwallet/pull/1502 (This updates script imports to prevent multiple imports of the same script for the tx store. This also prevents a rescan trigger if the script already exists.)
+* multi: store unecrypted scripts in address mgr. https://github.com/decred/dcrwallet/pull/1500 (This removes the need to encrypt a script and its hash before storage in the address manager.)
+* udb: add script storage testdata. https://github.com/decred/dcrwallet/pull/1497 (This is in preparation of v13 db upgrade.)
+* Allow arbitrary xpub account imports. https://github.com/decred/dcrwallet/pull/1471 (Note: opened on June 2nd, not sure how active...This commit implements a new JSON-RPC method "importxpub" which records an arbitrary HD extended pubkey to the wallet database and allows new addresses to be derived for the account...
+* multi: allow wallet unlocks via a passphrase token. https://github.com/decred/dcrwallet/pull/1437 (This updates the grpc interceptor to accept private passphrases set in context metadatas. When set the private passphrase takes precedence over the optional request passphrase field.)
+
 [Decrediton](https://github.com/decred/decrediton): {}
+
+Merged:
+
+* Move undefined variable to beginning https://github.com/decred/decrediton/pull/2162 (bug fix)
+* fix proposal details stop rendering https://github.com/decred/decrediton/pull/2160 (bug fix (run condition))
+* update dcrdata url https://github.com/decred/decrediton/pull/2159 (code maintenance)
+* Dark Mode: Settings selection https://github.com/decred/decrediton/pull/2157 (minor UI enhancement)
+* yarn upgrade packages with security vulnerabilities https://github.com/decred/decrediton/pull/2156 (code maintenance: patched vulnerabilities)
+* Change Decred logo to sold dark blue version in launcher (#2050) https://github.com/decred/decrediton/pull/2155 (UI enhancement)
+* Bump required dcrwallet api version to 7.0.0 https://github.com/decred/decrediton/pull/2151 (This resolves an issue where decrediton cannot be built with the latest release of dcrwallet v2.1.1)
+* upgrade deps https://github.com/decred/decrediton/pull/2149 (code maintenance: updating dependencies)
+* [responsive] Responsive purchase ticket view https://github.com/decred/decrediton/pull/2146 (UI work, refactoring)
+* Fix log and no id message https://github.com/decred/decrediton/pull/2144 (bug fix)
+* Visual Design Send View https://github.com/decred/decrediton/pull/2143 (UI: This PR refactors and update the visual design of transactions send view.)
+
+Open:
+
+* UI dark color scheme implementation https://github.com/decred/decrediton/pull/2163 (bunch of work on Dark Mode. Dark Mode Master Issue: https://github.com/decred/decrediton/issues/2089)
+* [POC] Refactor startup to a finite state machine https://github.com/decred/decrediton/pull/2130 (state machine work referenced in June DJ is ready for review)
+* [ln] Initial Version https://github.com/decred/decrediton/pull/2107 (LAST comment 6/1. Any update? This is the first version of an embedded LN wallet UI on decrediton. Current features:
+
+          Connect to initialized and unlocked ln wallets
+          Fund/Withdraw funds from onchain ln wallet
+          Open/Close channels
+          Create invoices
+          Send payments
+          Due to current limitations of dcrlnd, this can only be used on wallets that
+          have been previously unlocked.
+
+          It also requires the user to open a regular wallet before connecting to a ln
+          wallet, which is something we might wanna change in the future.
+
+          For the moment, in order to enable support to LN, users need to manually edit
+          the global decrediton config file to set "ln_enabled: true".
+
+          It's likely that this can only be merged after updating the grpc and electron versions (which will come on a separate PR)
+
 
 [Politeia](https://github.com/decred/politeia): {}
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
+{SB: it looks like a lot of design tweaks/changes. Is there a larger design effort we can reference here?}
+
+Merged:
+
+* middleware: bad check https://github.com/decred/dcrstakepool/pull/428 (bug fix)
+* middleware: don't use middleware when loading images https://github.com/decred/dcrstakepool/pull/429 (performance enhancement)
+* Update advice for connecting a new wallet. https://github.com/decred/dcrstakepool/pull/431 (improved recommended process for VSPs connecting a new wallet)
+* User's Email Address on mobile https://github.com/decred/dcrstakepool/issues/414 (bug fix)
+* Seperate nginx config for static files https://github.com/decred/dcrstakepool/pull/433 (reduce number of 503 errors with config change (performance enhancement?)
+* go.mod: update to protogen version 3 https://github.com/decred/dcrstakepool/pull/436 (updates the golang protobuff package to use version 3)
+* Move consistency checks and recovery to stakepoold https://github.com/decred/dcrstakepool/pull/437 
+* main.go: get for voting page with no multisig redirects to address https://github.com/decred/dcrstakepool/pull/438 (UI/bug fix)
+* Remove duplicated js-only code https://github.com/decred/dcrstakepool/pull/439 (This PR standardises the approach of hiding page elements when Javascript is not available, removing some duplicated code.)
+* stats.html: add Block Height to stats page https://github.com/decred/dcrstakepool/pull/440 (Adds feature to display pool block height to stats page. It would be useful for an outside observer to be able to verify whether or not a pool is healthy and on the correct block.)
+* Re-add support email address https://github.com/decred/dcrstakepool/pull/442 (minor UI fix)
+* Add missing bracket to nginx config https://github.com/decred/dcrstakepool/pull/443 (some config issue fixed..)
+* rpc: increment api version https://github.com/decred/dcrstakepool/pull/447 (start calling latest API version)
+* multi: consume v6.0.0 of the dcrd chain server RPC https://github.com/decred/dcrstakepool/pull/448 (update to use latest major version of the dcrd chain RPC server)
+* views: Fix password reset error popup https://github.com/decred/dcrstakepool/pull/449 (bug fix)
+* Disable captcha form when input is empty. https://github.com/decred/dcrstakepool/pull/452 (UI improvement)
+* Use full size favicon https://github.com/decred/dcrstakepool/pull/453 (UI improvement)
+
+Open:
+
+* Fix issue: CNTL: error sending verification email tls: either ServerN… https://github.com/decred/dcrstakepool/pull/441 (bug fix)
+* main.go: add status to voting page https://github.com/decred/dcrstakepool/pull/445 (UI improvement)
+* Add CreateMultisig RPC to stakepoold https://github.com/decred/dcrstakepool/pull/451 (large refactoring?)
+* Encode a url-friendly password when building smtp url https://github.com/decred/dcrstakepool/pull/454 (bug fix)
+
+
+
 [dcrlnd](https://github.com/decred/dcrlnd): {}
 
-[dcrandroid](https://github.com/decred/dcrandroid): {}
+All upstream commits from the [LND](https://github.com/lightningnetwork/lnd) repository have been ported and merged {SB: do we have a total number merged? Still 270 (total number reported in June DJ)? do we have a commit/PR/date up to which we're caught up to LND?}. 
+
+The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of Continuous Integration (CI). Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
+
+Merged:
+
+* [decred/lightning-faucet] Minor improvements to generate invoice form https://github.com/decred/lightning-faucet/pull/9 (since last month, you can generate invoices at the lightning faucet. this makes minor improvements such as initializing with a valid value, "bug fixes")
+* [decred/lightning-faucet] hook up travis https://github.com/decred/lightning-faucet/pull/10 (Add Continuous Integration (Travis) support for faucet)
+
+Open:
+
+* Port upstream PRs https://github.com/decred/dcrlnd/pull/36  (All upstream commits from the [LND](https://github.com/lightningnetwork/lnd) repository have been ported and merged {SB: do we have a total number merged? Still 270 (total number reported in June DJ)? do we have a commit/PR/date up to which we're caught up to LND?}. 
+* update deps (update dependencies)
+* [decred/lightning-faucet] Rename package, add pay invoice form and update number of confirmations for a channel https://github.com/decred/lightning-faucet/pull/8
+
+[dcrandroid](https://github.com/decred/dcrandroid): {} 
+
+Minor bug fixes and UI optimizations, as well as the ability to [rename accounts](https://github.com/decred/dcrandroid/pull/386).
+
+Merged: 
+
+* verify seed: reveal next row when tapping seeds https://github.com/decred/dcrandroid/pull/392 (UI enhancement)
+* Align views on send Fragment https://github.com/decred/dcrandroid/pull/391 (UI tweak)
+* disable new block notification during sync https://github.com/decred/dcrandroid/pull/388 (UI tweak (limit beeps when syncing blocks)
+* setup: move new wallet seed verification to after setup https://github.com/decred/dcrandroid/pull/387 (UI tweak - improve screen flow)
+* accounts: add option to rename account https://github.com/decred/dcrandroid/pull/386 (new feature - option to rename account)
+* Dont show receive address during wallet restore https://github.com/decred/dcrandroid/pull/385 (UI tweak)
+
+Open:
+
+* Add sound and vibration to notification https://github.com/decred/dcrandroid/pull/399 
+* Add stats activity https://github.com/decred/dcrandroid/pull/397 (This PR adds statistics activity to Settings -> Debug menu.)
+* + a couple more UI tweaks..
 
 [dcrios](https://github.com/raedahgroup/dcrios): {}
+
+Bug fixes and UI optimizations, new translations to [Spanish](https://github.com/raedahgroup/dcrios/pull/500), [Vietnamese](https://github.com/raedahgroup/dcrios/pull/498), and [Portuguese(Brazil)](https://github.com/raedahgroup/dcrios/pull/497).
 
 [dcrdata](https://github.com/decred/dcrdata):
 
@@ -32,7 +186,11 @@
 
 [docs](https://github.com/decred/dcrdocs): {}
 
+Minor bug fixes. 
+
 [decred.org](https://github.com/decred/dcrweb): {}
+
+Minor bug fixes, mobile wallets [added[(https://github.com/decred/dcrweb/pull/692 ) to core software downloads. 
 
 Other:
 
