--- a/journal/201907.md
+++ b/journal/201907.md
@@ -51,6 +51,7 @@ Merged:
 * Update to gRPC 1.22.0 and protoc-gen-go 1.3.2 https://github.com/decred/dcrwallet/pull/1504 (no description...presumably just dependency upgrades)
 * gRPC: add CoinType() method https://github.com/decred/dcrwallet/pull/1499 (Adds gRPC method to query wallet coin type. This resolves an issue where dcrwallet was unable to tell Decrediton or other wallets what the coin type is (i.e. New wallets are 42 but older seeds can be 20.) {SB: not sure what the 42 and 30 mean}
 * Remove gRPC methods that are obsoleted by RpcSync. https://github.com/decred/dcrwallet/pull/1496 (code maintenance. Removing methods no longer needed due to RpcSync)
+* Protect concurrent access to chain.Syncer.sidechains https://github.com/decred/dcrwallet/pull/1514 (bug fix)
 
 Open:
 
@@ -63,6 +64,7 @@ Open:
 * udb: add script storage testdata. https://github.com/decred/dcrwallet/pull/1497 (This is in preparation of v13 db upgrade.)
 * Allow arbitrary xpub account imports. https://github.com/decred/dcrwallet/pull/1471 (Note: opened on June 2nd, not sure how active...This commit implements a new JSON-RPC method "importxpub" which records an arbitrary HD extended pubkey to the wallet database and allows new addresses to be derived for the account...
 * multi: allow wallet unlocks via a passphrase token. https://github.com/decred/dcrwallet/pull/1437 (This updates the grpc interceptor to accept private passphrases set in context metadatas. When set the private passphrase takes precedence over the optional request passphrase field.)
+* Consistently log errors from handling RPC notifications https://github.com/decred/dcrwallet/pull/1515 (code maintenance)
 
 [Decrediton](https://github.com/decred/decrediton): {}
 
@@ -84,6 +86,7 @@ Open:
 
 * UI dark color scheme implementation https://github.com/decred/decrediton/pull/2163 (bunch of work on Dark Mode. Dark Mode Master Issue: https://github.com/decred/decrediton/issues/2089)
 * [POC] Refactor startup to a finite state machine https://github.com/decred/decrediton/pull/2130 (state machine work referenced in June DJ is ready for review)
+* [POC] Refactor startup to a finite state machine https://github.com/decred/decrediton/pull/2130
 * [ln] Initial Version https://github.com/decred/decrediton/pull/2107 (LAST comment 6/1. Any update? This is the first version of an embedded LN wallet UI on decrediton. Current features:
 
           Connect to initialized and unlocked ln wallets
@@ -135,6 +138,8 @@ Open:
 * main.go: add status to voting page https://github.com/decred/dcrstakepool/pull/445 (UI improvement)
 * Add CreateMultisig RPC to stakepoold https://github.com/decred/dcrstakepool/pull/451 (large refactoring?)
 * Encode a url-friendly password when building smtp url https://github.com/decred/dcrstakepool/pull/454 (bug fix)
+* Implement client side input validation for captcha https://github.com/decred/dcrstakepool/pull/456 (security enhancement @degeri?)
+* correct dcrwallet/dcrstakepoold count check, allow empty smtphost configuration https://github.com/decred/dcrstakepool/pull/457
 
 Work started:
 
