--- a/journal/201907.md
+++ b/journal/201907.md
@@ -96,13 +96,13 @@ Open:
           Send payments
           Due to current limitations of dcrlnd, this can only be used on wallets that
           have been previously unlocked.
-
+    
           It also requires the user to open a regular wallet before connecting to a ln
           wallet, which is something we might wanna change in the future.
-
+    
           For the moment, in order to enable support to LN, users need to manually edit
           the global decrediton config file to set "ln_enabled: true".
-
+    
           It's likely that this can only be merged after updating the grpc and electron versions (which will come on a separate PR)
 
 
@@ -330,19 +330,19 @@ Audio:
 
 ## Community Discussions
 
-Community stats:
+Community stats as of Aug 1:
 
-* Politeia users: {} (+{})
-* Twitter followers: {} (+{})
-* Reddit subscribers: {} (+{})
-* Matrix users: {} (+{})
-* Slack users: {} (+{})
-* Discord users: {}, verified to post: {}
-* Telegram users: {} (+{})
-* YouTube subscribers: {} (+{})
-* Facebook followers: {} (+{}), likes: {} (+{})
-* LinkedIn followers: {} (+{})
-* GitHub dcrd stars: {} (+{}), forks: {} (+{})
+* Politeia users: 154 (new more accurate method of counting)
+* Twitter followers: 40,572 (+93)
+* Reddit subscribers: 9,556 (+51)
+* Matrix users: 384 (+20)
+* Slack users 6,809 (+40)
+* Discord users: 2377 (+67), verified to post: 281 (+35)
+* Telegram users:  (+3,290)
+* YouTube subscribers: 3,800 (+ 13)
+* Facebook followers: 3,253 (+23), likes: 2,983 (+19)
+* LinkedIn followers: 591 (+24)
+* GitHub dcrd stars: 498 (+4), forks: 1,365 (+28)
 
 Comm systems news:
 
