add Treasury figures

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -212,9 +212,9 @@ Decred Australia community has been building nicely. An [update](https://medium.
 
 ## Governance
 
-In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using July's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. As these payments were for work completed in June, it is also informative to consider them in the context of the June average daily rate of ${n.nn} - in which case the USD received/spent figures are ${n}K/${n}K. As of {date}, Treasury balance is {n} DCR ({n.nn} million USD at ${n.nn}).
+In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,517 DCR and spent 10,344 DCR. Using July's daily average DCR/USD rate of $28.97, this is $450K received and $300K spent. As these payments were for work completed in June, it is also informative to consider them in the context of the June average daily rate of $28.90 {hardly worth repeating with such low volatility ;-)} - in which case the USD spent figure is $448K. As of Aug 1, Treasury balance is 627,514 DCR (16.8 million USD at $26.75).
 
-{do we need _received_ figure for prev month?}
+{do we need _received_ figure for prev month? rr: probably not, have removed}
 
 {high level recap of decision-making activity and most important events. link to Politeia Digest for higher detail}
 
