--- a/journal/201907.md
+++ b/journal/201907.md
@@ -192,7 +192,7 @@ Other:
 * RG is working on a mobile app for local person-to-person BTC/DCR trading (work is in private repos for now)
 * [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
 
-Dev activity stats for July: {n} active PRs, {n} master commits, {n}K added and {n}K deleted lines spread across {n} repositories. Contributions came from {n}-{n} developers per repository. ([chart]({chart link is optional, drop if not ready}))
+Dev activity stats for July: 51 active PRs, 219 master commits, 50148K added and 28692K deleted lines spread across 15 repositories. Contributions came from 1-6 developers per repository. ([chart]({chart link is optional, drop if not ready}))
 
 ## People
 
