--- a/journal/201907.md
+++ b/journal/201907.md
@@ -192,6 +192,7 @@ Other:
 * RG (maybe others?) have been working a lot this month on [dcrextdata.raedahgroup.com](dcrextdata.raedahgroup.com), a pkg for collecting external data sources not yet found on dcrdata. Should we maybe put this under dcrdata, since it's related and may be merged?
 * RG is working on a mobile app for local person-to-person BTC/DCR trading (work is in private repos for now)
 * [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
+* {mention webwallet no longer supported here?}
 
 Dev activity stats for July: 51 active PRs, 219 master commits, 50148K added and 28692K deleted lines spread across 15 repositories. Contributions came from 1-6 developers per repository. ([chart]({chart link is optional, drop if not ready}))
 
@@ -315,14 +316,12 @@ Upcoming:
 
 Selected articles:
 
-* https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9
-* https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted
-* https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4 + twitter https://twitter.com/_Checkmatey_/status/1148682397875167233
-* https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/
-* https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9
-* https://medium.com/@permabullnino/introduction-to-crypto-accounting-an-analysis-of-decred-as-an-accounting-system-4d3e67fce28
-* <https://www.blockheadcap.com/post/decred-investment-thesis>
-* {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
+* Bitcoin & Decred / Historical Documents of a Digital Financial Revolution by BlackBearXVII ([Medium](https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9))
+* Decred: What Gold And Bitcoin Wanted To Be by Pascal Thellmann ([seekingalpha.com](https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted))
+* Monetary premiums, can altcoins compete with Bitcoin? by @Checkmate ([Medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
+* Libta: Friend or Foe? by @jy-p [ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/)
+* Introduction to Crypto-Accounting: An Analysis of Decred as an Accounting System by Permabull Nino ([Medium ](https://medium.com/@permabullnino/introduction-to-crypto-accounting-an-analysis-of-decred-as-an-accounting-system-4d3e67fce28))
+* Blockhead Capital: Decred Investment Thesis ([blockheadcap.com](https://www.blockheadcap.com/post/decred-investment-thesis))
 
 Translations:
 
@@ -331,14 +330,17 @@ Translations:
 
 Videos:
 
-* Block TV @jy-p Libra: Friend or Foe? https://twitter.com/BLOCKTVnews/status/1156420032819277824?s=20
+* Libra: Friend or Foe? @jy-p interview on [Block TV](https://twitter.com/BLOCKTVnews/status/1156420032819277824)
+* Decred Assembly Deep Dive: Decentralizing the Treasury with @moo31337 ([youtube](https://www.youtube.com/watch?v=hpUVIUkgh9k))
+* 
 
 Audio:
 
-* https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics + twitter goodness https://twitter.com/decredproject/status/1150836740665552896
-* https://medium.com/@TrustlessState/decred-splitting-the-difference-between-bitcoin-and-ethereum-with-luke-powell-758cf6e1218d
-* https://twitter.com/decredproject/status/1157000762611896320?s=20
-* 
+* Decred in Depth Ep. 4 Murad Mahmudov - DCR Investment Thesis + SoV Narrative + Crypto Economics ([libsyn](https://decredindepth.libsyn.com/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics-0) [soundcloud](https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics)) ([twitter](https://twitter.com/decredproject/status/1150836740665552896))
+* Decred in Depth Ep. 5 Permabull Nino - Decred As Strong Accounting + Ticket Metrics ([libsyn](https://decredindepth.libsyn.com/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino-0)) ([twitter](https://twitter.com/decredproject/status/1157000762611896320?))
+https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics + twitter goodness https://twitter.com/decredproject/status/1150836740665552896
+* Decred, splitting the difference between Bitcoin and Ethereum, @lukebp on the POV Crypto podcast ([Medium](https://twitter.com/decredproject/status/1157000762611896320))
+
 
 ## Community Discussions
 
@@ -358,8 +360,12 @@ Community stats as of Aug 1:
 
 Comm systems news:
 
-* {chat.decred.org self-hosted chat addresses two issues: people forget to set Decred homeserver, independent infrastructure} {add issue link}
-* {Riot reactions https://medium.com/@RiotChat/%EF%B8%8Fmessage-editing-%EF%B8%8F-reactions-5cffec8f71a2}
+* chat.decred.org self-hosted chat addresses two issues: people forget to set Decred homeserver, independent infrastructure} {add issue link}
+* Riot users are now enjoying reactions and can edit their messages, following the [release](https://medium.com/@RiotChat/%EF%B8%8Fmessage-editing-%EF%B8%8F-reactions-5cffec8f71a2) of new versions. Riot users please be aware that editing your messages will replay them across the bridge to people using Slack and Discord. 
+
+
+
+
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -371,6 +377,7 @@ Selected Reddit posts:
 * https://www.reddit.com/r/decred/comments/cgz12h/in_a_scenario_in_which_a_miner_submits_a_block/
 * https://www.reddit.com/r/decred/comments/ch0gey/governance_can_flair_increase_the_odds_of/
 * https://www.reddit.com/r/decred/comments/ci82iy/david_ogilvy_talks_direct_response_advertising/
+* <https://www.reddit.com/r/decred/comments/cc8c0h/why_decred_wins_in_the_end_incrementalism/>
 
 Selected Twitter discussions:
 
@@ -386,7 +393,7 @@ Selected Twitter discussions:
 
 * https://twitter.com/RichardRed0x/status/1146917561751212032
 
-* 
+* https://twitter.com/_Checkmatey_/status/1148682397875167233
 
 * https://twitter.com/_Checkmatey_/status/1157342578787913733
 
