--- a/journal/201907.md
+++ b/journal/201907.md
@@ -338,8 +338,8 @@ Audio:
 
 * Decred in Depth Ep. 4 Murad Mahmudov - DCR Investment Thesis + SoV Narrative + Crypto Economics ([libsyn](https://decredindepth.libsyn.com/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics-0) [soundcloud](https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics)) ([twitter](https://twitter.com/decredproject/status/1150836740665552896))
 * Decred in Depth Ep. 5 Permabull Nino - Decred As Strong Accounting + Ticket Metrics ([libsyn](https://decredindepth.libsyn.com/ep-5-decred-as-strong-accounting-ticket-metrics-with-permabull-nino-0)) ([twitter](https://twitter.com/decredproject/status/1157000762611896320?))
-https://soundcloud.com/decredindepth/murad-mahmudov-dcr-investment-thesis-sov-narrative-crypto-economics + twitter goodness https://twitter.com/decredproject/status/1150836740665552896
 * Decred, splitting the difference between Bitcoin and Ethereum, @lukebp on the POV Crypto podcast ([Medium](https://twitter.com/decredproject/status/1157000762611896320))
+* On-chain atomic swaps, an episode of the Sound Money Podcast with @joshuam ([Spotify](https://open.spotify.com/episode/1SuzMUUmtm6xR7ofGN6t4a))
 
 
 ## Community Discussions
@@ -363,49 +363,55 @@ Comm systems news:
 * chat.decred.org self-hosted chat addresses two issues: people forget to set Decred homeserver, independent infrastructure} {add issue link}
 * Riot users are now enjoying reactions and can edit their messages, following the [release](https://medium.com/@RiotChat/%EF%B8%8Fmessage-editing-%EF%B8%8F-reactions-5cffec8f71a2) of new versions. Riot users please be aware that editing your messages will replay them across the bridge to people using Slack and Discord. 
 
-
-
-
-
 {selected discussed topics, as bullet list or one paragraph per topic}
 
-Debate about a better name for Decred's "atom" unit https://github.com/decredcommunity/issues/issues/129
+Selected topics:
 
-Selected Reddit posts:
+* The #DecredChallenge [started](https://twitter.com/_Checkmatey_/status/1145764832362319872?s=20) on Jul 1 when @checkmate challenged Bitcoiners to spend a month looking into Bitcoin and come out believing it should not be #2, inviting people who are not persuaded of its merits to engage in a debate about it. It [evolved](https://twitter.com/RichardRed0x/status/1146132909713240065?s=20) [quickly](https://twitter.com/_Checkmatey_/status/1146136667448913921?s=20) into a meme, got a [hash tag](https://twitter.com/Ammarooni/status/1146171552213479425), and then (thanks mostly to @checkmate) it grew into a tweet course on reasons why Decred merits serious investigation (see below). 
 
-* https://www.reddit.com/r/decred/comments/c9jxml/i_am_a_timetraveler_from_the_future_here_to_beg/
-* https://www.reddit.com/r/decred/comments/cgz12h/in_a_scenario_in_which_a_miner_submits_a_block/
-* https://www.reddit.com/r/decred/comments/ch0gey/governance_can_flair_increase_the_odds_of/
-* https://www.reddit.com/r/decred/comments/ci82iy/david_ogilvy_talks_direct_response_advertising/
-* <https://www.reddit.com/r/decred/comments/cc8c0h/why_decred_wins_in_the_end_incrementalism/>
+* Another [article](https://bravenewcoin.com/insights/decred-price-analysis-a-sustained-increase-in-mining-activity-2) was published which described Decred as a "Bitcoin fork", likely based on the use of this term in descriptions on [Coinmarketcap](https://coinmarketcap.com/currencies/decred/) and [Messari](https://messari.io/asset/decred) (which, to be fair, uses the more limited "Bitcoin codebase fork"). This is a mischaracterization which frustrates the community because "Bitcoin fork" would usually be interpreted to mean a coin which forked the Bitcoin Core software and/or BTC UTXO set - neither of which are true in Decred's case. "Bitcoin fork" does not reflect the fact that Decred's software was created from scratch by the same people who launched Decred, beginning its life as btcd, an independent golang implementation of a Bitcoin full node. @lukebp [tweeted](https://twitter.com/lukebp_/status/1155886623147429889) about this and received a response from Messari, @checkmate [expanded](https://twitter.com/_Checkmatey_/status/1155901635257929728) on @lukebp's comment to produce another chapter in the #DecredChallenge.
+
+* @ammarooni took the #DecredChallenge and came out with some [concerns](https://twitter.com/Ammarooni/status/1148013517016113152?s=20) about attack vectors related to stakeholder liability for illegal proposals and the susceptibility of the LLC to seizure of funds. @lukebp and @jz responded with an explanation of how Decred is moving towards a full DAO and how this will address the concerns.
+* The subject of whether to change the name for Decred's smallest units (atoms) or to integrate "credits" in the names for another denomination came up on [twitter](https://twitter.com/OfficialCryptos/status/1151603316167720960) and was discussed in chats and on this GitHub [issue](https://github.com/decredcommunity/issues/issues/129). Developers pointed out that "atom" is used thousands of times in the Decred codebase, which discouraged some proponents of the change but not others.  
+
 
 Selected Twitter discussions:
 
-* @_Checkmatey_ is killing it
+@Checkmate has been very active on twitter and generating good engagement around the #DecredChallenge and #DontSleepOnDecred hashtags, here are some highlights:
 
-* https://twitter.com/_Checkmatey_/status/1148354974390390784
+* [Tweet](https://twitter.com/_Checkmatey_/status/1148682397875167233) about Monetary Premiums article
+* [Decred is not Bitcoin fork](https://twitter.com/_Checkmatey_/status/1155901635257929728)
+* [Skin in the game](https://twitter.com/_Checkmatey_/status/1148354974390390784)
+* [The hedge for Bitcoiners and Ethereuns](https://twitter.com/_Checkmatey_/status/1149560942654414848)
+* [Differentiate where it matters](https://twitter.com/_Checkmatey_/status/1150831105081298944)
+* [Treasury Fund](https://twitter.com/_Checkmatey_/status/1157342578787913733)
+* [Politeia proposals](https://twitter.com/_Checkmatey_/status/1156293040509739010)
+* [A digital organism designed to deliver the most resilient sound money](https://twitter.com/_Checkmatey_/status/1155567971823226881)
 
-* https://twitter.com/_Checkmatey_/status/1149560942654414848
+Others selected tweets:
 
-* https://twitter.com/_Checkmatey_/status/1151235456484487169
+* #DecredChallenge: Find an engineering team that takes the challenge of [limiting](https://twitter.com/RichardRed0x/status/1146917561751212032) its own power and influence as seriously than Company 0 does with Decred
 
-* https://twitter.com/_Checkmatey_/status/1150831105081298944
+* Chris Burniske on what got him [interested](https://twitter.com/lefebvre_dustin/status/1156316679040901125) in the Decred project 
+* Decred's hybrid PoW + PoS [enables](https://twitter.com/NoahPierau/status/1155466908738686977?s=20) 3 formal governance mechanisms
+* The Decred Journal is now being circulated on Binance Info
+* @lukebp's Decred investment thesis in one [tweet](https://twitter.com/lukebp_/status/1154398108538658816):
 
-* https://twitter.com/RichardRed0x/status/1146917561751212032
+> Technological change is hard to predict.
+> A protocol needs to be able to adapt to those changes.
+> The people making decisions about those changes should be the people with skin in the game, i.e. the stakeholders.
 
-* https://twitter.com/_Checkmatey_/status/1148682397875167233
 
-* https://twitter.com/_Checkmatey_/status/1157342578787913733
+Selected Reddit posts:
 
-* https://twitter.com/_Checkmatey_/status/1156293040509739010
+* [Decred Community Growth](https://www.reddit.com/r/decred/comments/c9xtml/decred_community_growth/)
+* [I am a time-traveler from the future, here to beg you to continue what you are doing.](https://www.reddit.com/r/decred/comments/c9jxml/i_am_a_timetraveler_from_the_future_here_to_beg/)
+* [In a scenario in which a miner submits a block with a double spend, do stakers have any power in ensuring that block isn't validated? If not, what role do stakers have in preventing majority/51% attacks?](https://www.reddit.com/r/decred/comments/cgz12h/in_a_scenario_in_which_a_miner_submits_a_block/)
+* [Why Decred Wins in the End? Incrementalism](https://www.reddit.com/r/decred/comments/cc8c0h/why_decred_wins_in_the_end_incrementalism/)
+* [Governance: Can 'Flair' increase the odds of self-guided education on r/decred?](https://www.reddit.com/r/decred/comments/ch0gey/governance_can_flair_increase_the_odds_of/)
+* [David Ogilvy talks Direct Response Advertising](https://www.reddit.com/r/decred/comments/ci82iy/david_ogilvy_talks_direct_response_advertising/)
+* [General: What metaphor/analogy helps you understand different actors within the project?](https://www.reddit.com/r/decred/comments/cc40hb/general_what_metaphoranalogy_helps_you_understand/)
 
-* https://twitter.com/lefebvre_dustin/status/1156316679040901125
-
-* https://twitter.com/_Checkmatey_/status/1155567971823226881
-
-  https://twitter.com/Binance_Info/status/1153575996487954432 - Decred Journal now being circulated on Binance Info
-
-* important questions https://twitter.com/Ammarooni/status/1148013517016113152
 
 ## Markets
 
