Adds media item

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -319,9 +319,10 @@ Selected articles:
 * Bitcoin & Decred / Historical Documents of a Digital Financial Revolution by BlackBearXVII ([Medium](https://medium.com/@imagnusholdings/bitcoin-decred-historical-documents-of-a-digital-financial-revolution-4debfa0d10d9))
 * Decred: What Gold And Bitcoin Wanted To Be by Pascal Thellmann ([seekingalpha.com](https://seekingalpha.com/instablog/49962360-pascal-thellmann/5324856-decred-gold-bitcoin-wanted))
 * Monetary premiums, can altcoins compete with Bitcoin? by @Checkmate ([Medium](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4))
-* Libta: Friend or Foe? by @jy-p [ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/)
+* Libra: Friend or Foe? by @jy-p [ccn.com](https://www.ccn.com/news/libra-friend-or-foe/2019/07/21/)
 * Introduction to Crypto-Accounting: An Analysis of Decred as an Accounting System by Permabull Nino ([Medium ](https://medium.com/@permabullnino/introduction-to-crypto-accounting-an-analysis-of-decred-as-an-accounting-system-4d3e67fce28))
 * Blockhead Capital: Decred Investment Thesis ([blockheadcap.com](https://www.blockheadcap.com/post/decred-investment-thesis))
+* Sovereign (Crypto) Networks by Joel Monegro ([placeholder.vc](https://www.placeholder.vc/blog/2019/7/31/lvhpfydo4m3uoezhwhicyxo06og0mn)) - mentions Decred as an example
 
 Translations:
 
@@ -390,11 +391,11 @@ Selected Twitter discussions:
 
 Others selected tweets:
 
-* #DecredChallenge: Find an engineering team that takes the challenge of [limiting](https://twitter.com/RichardRed0x/status/1146917561751212032) its own power and influence as seriously than Company 0 does with Decred
+* #DecredChallenge: Find an engineering team that takes the challenge of [limiting](https://twitter.com/RichardRed0x/status/1146917561751212032) its own power and influence as seriously as Company 0 has done with Decred
 
 * Chris Burniske on what got him [interested](https://twitter.com/lefebvre_dustin/status/1156316679040901125) in the Decred project 
 * Decred's hybrid PoW + PoS [enables](https://twitter.com/NoahPierau/status/1155466908738686977?s=20) 3 formal governance mechanisms
-* The Decred Journal is now being circulated on Binance Info
+* The Decred Journal is now being [circulated](https://twitter.com/Binance_Info/status/1153575996487954432?s=20) on Binance Info
 * @lukebp's Decred investment thesis in one [tweet](https://twitter.com/lukebp_/status/1154398108538658816):
 
 > Technological change is hard to predict.
