Events formatting and adding

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -288,23 +288,22 @@ BlockHead:
 
 Attended:
 
-* {dates} - [{title}]({event link}) - {city}, {country}. {recap}
-* https://twitter.com/elianhuesca/status/1157313830969630725?s=20
-* https://twitter.com/elianhuesca/status/1154452590983299073?s=20 Elian at legal hackers  mx
-* Jake at Voice of Blockchain Sep 30 Oct 1 Chicago https://twitter.com/BlockchainVoice/status/1154772731575099392?s=20
-* https://twitter.com/DecredVietnam/status/1157150461947813888?s=20 Decred staking economy vietnam
-* https://twitter.com/DecredCN/status/1148983482732830720?s=20 @wanbihou Beijing
-* Staked US NYC Fireside chat with @joshuam July 11 https://twitter.com/staked_us/status/1148687292032323584?s=20
-* @Dominic at StakingCon Beijing July 10 https://twitter.com/BlockBeatsChina/status/1147570186519638017?s=20
-* Sao Paulo 10 July https://twitter.com/Decred_BR/status/1147201276058505216?s=20
-* https://twitter.com/AnaDaliacd23/status/1146873685229416450?s=20
-* july 4-5 Blockchain summit Latam https://twitter.com/Decred_ES/status/1146093986806976513?s=20
+* Jul 4-5 - [Blockchain Summit Latam](https://twitter.com/Decred_ES/status/1146093986806976513) - Mexico City, Mexico - Ana Dalia [representing](https://twitter.com/AnaDaliacd23/status/1146873685229416450), plus post-conference [dinner](https://twitter.com/Decred_ES/status/1147522846513618945?s=20) sponsored by Decred
+* Jul 10 - [Decred meetup Sao Paulo](https://twitter.com/Decred_BR/status/1147201276058505216) - Brazil
+* Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017?s=20) - Beijing, China - @Dominic [representing](https://twitter.com/DecredCN/status/1148983482732830720) Decred for a chat at this BlockBeats China event
+* Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584?s=20) - NYC, USA. Fireside Chat with @joshuam
+* Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) pre-summit meet-up - Mexico City, Mexico - @elian represented the project and gave a talk on Decred
+* Jul 25 - [Legal Hackers Mexico](https://twitter.com/LegalHackersMX/status/1153832499333795840?s=20) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project
+* Jul 28 - [Vietnam Staking Economy](https://twitter.com/DecredVietnam/status/1157150461947813888?s=20) - Ho Chi Minh, Vietnam
+* Chicago July 24? <https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156261749215178WZXqK:decred.org?via=decred.org&via=matrix.org>
 
 Upcoming:
 
-* {dates} - [{title}]({event link}) - {city}, {country}. {info}
-* https://twitter.com/decredproject/status/1157416657670868997?s=20 @zubairzia in Governance for Good presentation at Futurist Conf Aug 13-14 Toronto
-* 
+* Aug 8 - [Blockchain Bajio](https://www.eventbrite.com/e/blockchain-bajio-2do-meetup-tickets-66510186759) - Leon, Guanajuato, Mexico
+* Aug 13-14 - [Futurist Conference](https://eventmobi.com/futurist/) - Toronto, Canada - Decred announced as a sponsor and has a spot on the [panel](https://twitter.com/decredproject/status/1157416657670868997) Blockchain Social Impact & Governance for Good, where @ZubairZia will represent the project.
+* Aug 20 - [Crypto Alchemy: Mining and Staking Decred](https://secure.meetup.com/register/?referrer_n=event&referrer_i=ffssfryzlbbc&ctx=ref) - Philadelphia, USA - with [@mikeghen](https://twitter.com/mikeghen/status/1155594343702511616?s=20)
+* Aug 28 - [Blockchain Bootcamp](https://www.blockchainbootcamp.net/) - Victoria, Australia - @zohand and co [invited](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15644812201506dzVgU:decred.org?via=decred.org&via=matrix.org) to run a blockchain governance event as part of one of the main streams.
+* Sep 30 - Oct 1 - [Voice of Blockchain](https://twitter.com/BlockchainVoice/status/1154772731575099392) - Chicago, USA. @jy-p will present a keynote on Why Direct Sovereignty & Multi-Stakeholder Inclusive Governance Will Last.
 
 {announcements in Events domain}
 
